--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Animal ABC's</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -22,6 +22,6 @@
         </footer>
   
       </div>
-<script src="js/app.js"></script>
+<script src="./js/app.js"></script>
 </body>
 </html>
